fix general alignment for content

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -50,6 +50,14 @@
 }
 
 @media (min-width: 768px){
+    .cards-container .default-content-wrapper {
+        padding: var(--helix-core-section-padding);
+    }
+
+    .cards-container .cards-wrapper {
+        padding: var(--helix-core-section-padding);
+    }
+    
     .section.cards-with-background-right-container .default-content-wrapper picture {
         display: unset;
         position: absolute;
